separate svms and demo of onnx operators

--- a/NNClassifier.ipynb
+++ b/NNClassifier.ipynb
@@ -29,39 +29,13 @@
    "outputs": [],
    "source": [
     "class MentalStateClassifier(nn.Module):\n",
-    "  def __init__(self):\n",
+    "  def __init__(self, svm):\n",
     "    super().__init__()\n",
-    "    self.input = nn.Linear(HIDDEN_SIZE, HIDDEN_SIZE)    \n",
-    "    self.hidden = nn.Linear(HIDDEN_SIZE, HIDDEN_SIZE)\n",
-    "    self.hidden2 = nn.Linear(HIDDEN_SIZE, HIDDEN_SIZE)\n",
-    "    self.hidden3 = nn.Linear(HIDDEN_SIZE, HIDDEN_SIZE)\n",
-    "    self.output = nn.Linear(HIDDEN_SIZE, OUTPUT_SIZE)\n",
-    "\n",
-    "    self.dropout = nn.Dropout(0.1) # for better generalization\n",
-    "    self.relu = nn.LeakyReLU() # ensures non-linearity\n",
+    "    self.SVM = svm\n",
     "\n",
     "  def forward(self, x): # (1, 25, 40) -> (1, 4)\n",
-    "    # Average 1 second of data \n",
-    "    x = x.mean(dim=1)\n",
-    "\n",
-    "    x = self.dropout(x)\n",
-    "    x = self.input(x)\n",
-    "    x = self.relu(x) \n",
-    "    \n",
-    "    # x = self.dropout(x)\n",
-    "    # x = self.hidden(x)\n",
-    "    # x = self.relu(x)\n",
-    "\n",
-    "    # x = self.dropout(x)\n",
-    "    # x = self.hidden2(x)\n",
-    "    # x = self.relu(x)\n",
-    "\n",
-    "    # x = self.dropout(x)\n",
-    "    # x = self.hidden3(x)\n",
-    "    # x = self.relu(x)\n",
-    "\n",
-    "    x = self.output(x)\n",
-    "    # x = self.relu(x) \n",
+    "    x = x.mean(dim=1) # Average 1 second of data \n",
+    "    x = self.SVM.predict(x)\n",
     "    return x\n",
     "    \n",
     "model = MentalStateClassifier()\n",
@@ -404,13 +378,6 @@
     "                  output_names = ['Y']       # the model's output names\n",
     "                  )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
