--- a/data_splitting.ipynb
+++ b/data_splitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,13 +290,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.clear_directories([TRANING_DATA_PATH, TESTING_DATA_PATH, VALIDATION_DATA_PATH])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
+      "Validation set won't be created...\n",
       "Validation set won't be created...\n",
       "Validation set won't be created...\n",
       "Validation set won't be created...\n",
@@ -329,13 +402,6 @@
     "for experiment in experiments:\n",
     "  utils.splitDataAndSave(experiment, TRAINING_SIZE, TESTING_SIZE, VALIDATION_SIZE, TRANING_DATA_PATH, TESTING_DATA_PATH, VALIDATION_DATA_PATH)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
