--- a/NNClassifier.ipynb
+++ b/NNClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MentalStateClassifier(nn.Module):\n",
-    "  def __init__(self, svm):\n",
+    "  def __init__(self):\n",
     "    super().__init__()\n",
-    "    self.SVM = svm\n",
+    "    self.input = nn.Linear(HIDDEN_SIZE, HIDDEN_SIZE)    \n",
+    "    self.output = nn.Linear(HIDDEN_SIZE, OUTPUT_SIZE)\n",
+    "    \n",
+    "    self.softmax = nn.Softmax(dim=1)\n",
+    "    self.dropout = nn.Dropout(p=0.2)\n",
+    "    self.relu = nn.ReLU()\n",
     "\n",
     "  def forward(self, x): # (1, 25, 40) -> (1, 4)\n",
     "    x = x.mean(dim=1) # Average 1 second of data \n",
-    "    x = self.SVM.predict(x)\n",
+    "    \n",
+    "    x = self.dropout(x)\n",
+    "    x = self.input(x)\n",
+    "    x = self.relu(x) \n",
+    "    x = self.output(x)\n",
+    "    x = self.softmax(x)\n",
+    "\n",
+    "    if not self.training:\n",
+    "      x = torch.round(x, decimals=3)\n",
     "    return x\n",
     "    \n",
     "model = MentalStateClassifier()\n",
@@ -46,214 +59,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_epochs = 14\n",
+    "n_epochs = 2\n",
     "batch_size = 8\n",
-    "n_batches = utils.getTrainingRowNum(CLASSIFIED_STATES) // SAMPLING_RATE // batch_size - 5"
+    "n_batches = utils.getTrainingRowNum(CLASSIFIED_STATES) // SAMPLING_RATE // batch_size - 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 546/546 [00:04<00:00, 125.98batch/s, acc=0, loss=0.839]\n"
+      "Epoch 0: 100%|██████████| 2896/2896 [00:20<00:00, 141.63batch/s, acc=1, loss=1.49] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 validation: Cross-entropy=1.1784, Accuracy=0.4048\n"
+      "Epoch 0 validation: Cross-entropy=1.4833, Accuracy=0.2605\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 546/546 [00:03<00:00, 145.92batch/s, acc=0, loss=0.629]\n"
+      "Epoch 1: 100%|██████████| 2896/2896 [00:20<00:00, 140.08batch/s, acc=1, loss=1.37] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 validation: Cross-entropy=1.4152, Accuracy=0.3783\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2: 100%|██████████| 546/546 [00:06<00:00, 88.21batch/s, acc=0, loss=0.71]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2 validation: Cross-entropy=1.2857, Accuracy=0.4206\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3: 100%|██████████| 546/546 [00:04<00:00, 113.56batch/s, acc=0, loss=0.624]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3 validation: Cross-entropy=1.2167, Accuracy=0.381\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4: 100%|██████████| 546/546 [00:04<00:00, 132.55batch/s, acc=0, loss=0.693]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4 validation: Cross-entropy=1.7379, Accuracy=0.364\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5: 100%|██████████| 546/546 [00:04<00:00, 135.69batch/s, acc=0, loss=0.418] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5 validation: Cross-entropy=1.4893, Accuracy=0.4476\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6: 100%|██████████| 546/546 [00:04<00:00, 132.27batch/s, acc=0, loss=0.538] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6 validation: Cross-entropy=1.4962, Accuracy=0.4265\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7: 100%|██████████| 546/546 [00:03<00:00, 138.46batch/s, acc=0, loss=0.459]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7 validation: Cross-entropy=1.1684, Accuracy=0.4254\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8: 100%|██████████| 546/546 [00:03<00:00, 136.55batch/s, acc=0, loss=0.452]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8 validation: Cross-entropy=1.8821, Accuracy=0.3847\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 9: 100%|██████████| 546/546 [00:03<00:00, 139.74batch/s, acc=0, loss=0.831] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 9 validation: Cross-entropy=1.27, Accuracy=0.4323\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10: 100%|██████████| 546/546 [00:04<00:00, 133.22batch/s, acc=0, loss=0.795] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10 validation: Cross-entropy=1.1208, Accuracy=0.4397\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 11: 100%|██████████| 546/546 [00:03<00:00, 139.94batch/s, acc=0, loss=0.353] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 11 validation: Cross-entropy=1.3485, Accuracy=0.409\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 12: 100%|██████████| 546/546 [00:04<00:00, 134.15batch/s, acc=0, loss=0.879] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 12 validation: Cross-entropy=1.5645, Accuracy=0.4132\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 13: 100%|██████████| 546/546 [00:04<00:00, 127.26batch/s, acc=1, loss=0.0954]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 13 validation: Cross-entropy=1.5402, Accuracy=0.418\n"
+      "Epoch 1 validation: Cross-entropy=1.4835, Accuracy=0.2603\n"
      ]
     },
     {
@@ -262,7 +107,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,27 +186,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([8, 25, 40])"
+       "(tensor([[1., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0.],\n",
+       "         [1., 0., 0., 0.]], grad_fn=<RoundBackward1>),\n",
+       " torch.Size([8, 25, 40]))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_batch.shape"
+    "torch.round(model(X_batch), decimals=3), X_batch.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,14 +223,20 @@
     "\n",
     "torch.onnx.export(model,                       # model being run\n",
     "                  X_batch,                         # model input (or a tuple for multiple inputs)\n",
-    "                  './exportedModels/BNM005-without-neutral.onnx',            # where to save the model (can be a file or file-like object)\n",
+    "                  './exported_models/bnnm-NN-001.onnx',            # where to save the model (can be a file or file-like object)\n",
     "                  export_params=True,        # store the trained parameter weights inside the model file\n",
-    "                  opset_version=9,           # the ONNX version to export the model to\n",
     "                  do_constant_folding=True,  # whether to execute constant folding for optimization\n",
     "                  input_names = ['X'],       # the model's input names\n",
     "                  output_names = ['Y']       # the model's output names\n",
     "                  )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
