improve one by one test

--- a/SVMClassifier.ipynb
+++ b/SVMClassifier.ipynb
@@ -173,27 +173,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting for boredom: 0.22703923285007477\n",
-      "Predicting for flow: 0.1732882410287857\n",
-      "Predicting for frustration: 0.21803897619247437\n",
-      "Predicting for neutral: 0.19351623952388763\n"
+      "Predicting for boredom: 0.48299548029899597\n",
+      "Predicting for flow: 0.4976547062397003\n",
+      "Predicting for frustration: 0.531104326248169\n",
+      "Predicting for neutral: 0.5129537582397461\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import mean_squared_error as MSE\n",
     "\n",
-    "for state in CLASSIFIED_STATES:\n",
-    "  X_test, y_test = utils.load_testing_data(states=[state])\n",
-    "  X_test = X_test.mean(axis=1)\n",
-    "  y_test = y_test[:, 0].numpy()\n",
+    "X_test, y_test = utils.load_testing_data(states=CLASSIFIED_STATES)\n",
+    "X_test = X_test.mean(axis=1)\n",
+    "\n",
+    "for i, state in enumerate(CLASSIFIED_STATES):\n",
+    "  y_test_i = y_test[:, i].numpy()\n",
     "\n",
     "  session = rt.InferenceSession(f\"{EXPORTED_MODELS_PATH}/svm_{state}.onnx\", providers=[\"CPUExecutionProvider\"])\n",
     "  input_name = session.get_inputs()[0].name\n",
@@ -201,7 +202,7 @@
     "  preds = session.run(label_name, {input_name: X_test.numpy().astype(np.float32)})\n",
     "  preds = np.array(preds[0])[:, 0]\n",
     "\n",
-    "  print(f'Predicting for {state}: {MSE(preds, y_test)}')"
+    "  print(f'Predicting for {state}: {MSE(preds, y_test_i)}')"
    ]
   },
   {
