--- a/lol_classifier/lol_classifier.ipynb
+++ b/lol_classifier/lol_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'utils' from '/mnt/cb8c2a81-32e7-40bc-af74-0c1386cda683/programowanie/pipelon/Classifier-Builder/lol_classifier/utils.py'>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -50,23 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "From lol_2024-08-04T21-10-29 with shape:(41331, 41) and markers:7 kills:0, deaths:7\n",
-      "From lol_2024-08-08T14-29-23 with shape:(61232, 41) and markers:9 kills:0, deaths:9\n",
-      "From lol_2024-08-08T16-38-51 with shape:(49694, 41) and markers:20 kills:10, deaths:10\n",
-      "From lol_2024-08-08T19-40-51 with shape:(44081, 41) and markers:15 kills:8, deaths:7\n",
-      "From lol_2024-08-08T20-58-04 with shape:(30700, 41) and markers:11 kills:3, deaths:8\n",
-      "From lol_2024-08-08T21-44-59 with shape:(29347, 41) and markers:8 kills:2, deaths:6\n",
-      "From lol_2024-08-09T14-47-50 with shape:(54396, 41) and markers:16 kills:8, deaths:8\n",
-      "From lol_2024-08-12T11-51-55 with shape:(49782, 41) and markers:9 kills:5, deaths:4\n",
-      "From lol_2024-08-12T15-18-29 with shape:(53692, 41) and markers:9 kills:0, deaths:9\n",
-      "From lol_2024-08-12T17-29-12 with shape:(42603, 41) and markers:12 kills:8, deaths:4\n"
+      "From lol_2024-08-04T21-10-29 with shape:(41331, 41) and markers:82 kills:0, deaths:7\n",
+      "From lol_2024-08-08T14-29-23 with shape:(61232, 41) and markers:84 kills:0, deaths:9\n",
+      "From lol_2024-08-08T16-38-51 with shape:(49694, 41) and markers:95 kills:10, deaths:10\n",
+      "From lol_2024-08-08T19-40-51 with shape:(44081, 41) and markers:90 kills:8, deaths:7\n",
+      "From lol_2024-08-08T20-58-04 with shape:(30700, 41) and markers:86 kills:3, deaths:8\n",
+      "From lol_2024-08-08T21-44-59 with shape:(29346, 41) and markers:83 kills:2, deaths:6\n",
+      "From lol_2024-08-09T14-47-50 with shape:(54396, 41) and markers:91 kills:8, deaths:8\n",
+      "From lol_2024-08-12T11-51-55 with shape:(49782, 41) and markers:84 kills:5, deaths:4\n",
+      "From lol_2024-08-12T15-18-29 with shape:(53692, 41) and markers:84 kills:0, deaths:9\n",
+      "From lol_2024-08-12T17-29-12 with shape:(42603, 41) and markers:87 kills:8, deaths:4\n"
      ]
     }
    ],
@@ -76,7 +76,9 @@
     "  filename = path.split('/')[-2]\n",
     "\n",
     "  df = utils.read_eeg_data(path)\n",
-    "  df.drop(df[df.iloc[:, -1] == 'd'].index, inplace=True)\n",
+    "  df.drop(df[df.iloc[:, -1] == 'd'].index, inplace=True) # drop flashes\n",
+    "  df.iloc[:SAMPLING_RATE*3, -1]= 'neutral'\n",
+    "\n",
     "  markers = df.iloc[:, -1]\n",
     "  print(f\"From {filename} with shape:{df.shape} and markers:{len(markers[markers != '0'])} kills:{len(markers[markers == 'kill'])}, deaths:{len(markers[markers == 'death'])}\")\n",
     "\n",
@@ -91,47 +93,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of kills=2537; deaths=4239\n"
+      "Number of kills=2537; deaths=4239; neutral=1190\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "((6776, 41), (1697, 41))"
+       "((7966, 41), (1997, 41))"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train, test = utils.load_datasets()\n",
-    "train.shape, test.shape"
+    "train.shape, test.shape "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(0, 41), dtype=float64)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[np.isnan(train).any(axis=1)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC(C=1, kernel=&#x27;linear&#x27;, random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SVC</label><div class=\"sk-toggleable__content\"><pre>SVC(C=1, kernel=&#x27;linear&#x27;, random_state=42)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-3 {color: black;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC(C=1, kernel=&#x27;poly&#x27;, probability=True, random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SVC</label><div class=\"sk-toggleable__content\"><pre>SVC(C=1, kernel=&#x27;poly&#x27;, probability=True, random_state=42)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
-       "SVC(C=1, kernel='linear', random_state=42)"
+       "SVC(C=1, kernel='poly', probability=True, random_state=42)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,37 +164,71 @@
     "X_train, y_train = train[:, :-1], train[:, -1]\n",
     "X_test, y_test = test[:, :-1], test[:, -1]\n",
     "\n",
-    "svm = SVC(kernel='linear', C=1, random_state=42)\n",
+    "svm = SVC(kernel='poly', degree=3, C=1, random_state=42, decision_function_shape='ovr', probability=True)\n",
     "svm.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.7289334119033589\n"
+      "accuracy: 0.9053580370555834\n",
+      "Confusion Matrix:\n",
+      "+-----------------+-----------------+------------------+--------------------+\n",
+      "|                 | Predicted: kill | Predicted: death | Predicted: neutral |\n",
+      "+-----------------+-----------------+------------------+--------------------+\n",
+      "|  Actual: kill   |       547       |        89        |         0          |\n",
+      "|  Actual: death  |       90        |       964        |         7          |\n",
+      "| Actual: neutral |        1        |        2         |        297         |\n",
+      "+-----------------+-----------------+------------------+--------------------+\n",
+      "\n",
+      "Classification Report:\n",
+      "+--------------+-----------+--------+----------+---------+\n",
+      "|              | precision | recall | f1-score | support |\n",
+      "+--------------+-----------+--------+----------+---------+\n",
+      "|     kill     |   0.857   |  0.86  |  0.859   |  636.0  |\n",
+      "|    death     |   0.914   | 0.909  |  0.911   | 1061.0  |\n",
+      "|   neutral    |   0.977   |  0.99  |  0.983   |  300.0  |\n",
+      "|   accuracy   |   0.905   | 0.905  |  0.905   |  0.905  |\n",
+      "|  macro avg   |   0.916   |  0.92  |  0.918   | 1997.0  |\n",
+      "| weighted avg |   0.905   | 0.905  |  0.905   | 1997.0  |\n",
+      "+--------------+-----------+--------+----------+---------+\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([1.])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print('accuracy:', svm.score(X_test, y_test))\n",
-    "svm.predict(X_test[0, :].reshape(1, -1))"
+    "\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "y_pred = svm.predict(X_test)\n",
+    "\n",
+    "utils.present_confusion_matrix(confusion_matrix(y_test, y_pred))\n",
+    "utils.present_metrics(classification_report(y_test, y_pred, target_names=STATES, output_dict=True))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skl2onnx import to_onnx\n",
+    "onx = to_onnx(svm, X_train[:1].astype(np.float32), target_opset=12)\n",
+    "with open(\"output/svm-without-preprocessing-90p.onnx\", \"wb\") as f:\n",
+    "    f.write(onx.SerializeToString())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
