move filter funcitons to utils

--- a/lol_classifier/lol_classifier.ipynb
+++ b/lol_classifier/lol_classifier.ipynb
@@ -50,13 +50,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating RawArray with float64 data, n_channels=40, n_times=41331\n",
+      "    Range : 0 ... 41330 =      0.000 ...  1653.200 secs\n",
+      "Ready.\n",
+      "Filtering raw data in 1 contiguous segment\n",
+      "Setting up band-stop filter from 7.5 - 8.5 Hz\n",
+      "\n",
+      "FIR filter parameters\n",
+      "---------------------\n",
+      "Designing a one-pass, zero-phase, non-causal bandstop filter:\n",
+      "- Windowed time-domain design (firwin) method\n",
+      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
+      "- Lower passband edge: 7.48\n",
+      "- Lower transition bandwidth: 0.50 Hz (-6 dB cutoff frequency: 7.23 Hz)\n",
+      "- Upper passband edge: 8.52 Hz\n",
+      "- Upper transition bandwidth: 0.50 Hz (-6 dB cutoff frequency: 8.77 Hz)\n",
+      "- Filter length: 165 samples (6.600 s)\n",
+      "\n",
       "Creating RawArray with float64 data, n_channels=40, n_times=41331\n",
       "    Range : 0 ... 41330 =      0.000 ...  1653.200 secs\n",
       "Ready.\n",
@@ -73,15 +90,22 @@
       "- Upper passband edge: 10.00 Hz\n",
       "- Upper transition bandwidth: 2.50 Hz (-6 dB cutoff frequency: 11.25 Hz)\n",
       "- Filter length: 83 samples (3.320 s)\n",
-      "\n",
-      "From untitled folder with shape:(41331, 41) and markers:83 kills:1, deaths:7\n"
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From untitled folder with shape:(41331, 41) and markers:83 kills:1, deaths:7\n"
      ]
     }
    ],
@@ -94,27 +118,11 @@
     "    df.drop(df[df.iloc[:, -1] == 'd'].index, inplace=True)  # drop flashes\n",
     "    df.iloc[:SAMPLING_RATE * 3, -1] = 'neutral'\n",
     "\n",
-    "    # Apply notch filter at 50 Hz and adjust band-pass filter based on Nyquist frequency\n",
-    "    import mne\n",
+    "    # Apply notch filter using the utility function\n",
+    "    # df.iloc[:, :-1] = utils.apply_notch_filter(df.iloc[:, :-1], sampling_rate=SAMPLING_RATE, freqs=8.0)\n",
     "\n",
-    "    ch_names = df.columns[:-1].tolist()\n",
-    "    ch_names = [str(ch) for ch in ch_names]  # Ensure all channel names are strings\n",
-    "    info = mne.create_info(ch_names=ch_names, sfreq=SAMPLING_RATE, ch_types=\"eeg\")\n",
-    "    raw = mne.io.RawArray(df.iloc[:, :-1].T.values, info)\n",
-    "\n",
-    "    # Apply notch filter at 50 Hz\n",
-    "    # raw.notch_filter(freqs=50) # Notch filter is not necessary since SAMPLING_RATE is 25 \n",
-    "\n",
-    "    # Determine safe band-pass filter range\n",
-    "    nyquist_freq = SAMPLING_RATE / 2\n",
-    "    low_freq = 1.0\n",
-    "    high_freq = 10.0\n",
-    "\n",
-    "    # Apply band-pass filter\n",
-    "    raw.filter(l_freq=low_freq, h_freq=high_freq)\n",
-    "\n",
-    "    # Convert back to DataFrame\n",
-    "    df.iloc[:, :-1] = raw.get_data().T\n",
+    "    # Apply band-pass filter using the utility function\n",
+    "    # df.iloc[:, :-1] = utils.apply_bandpass_filter(df.iloc[:, :-1], sampling_rate=SAMPLING_RATE, l_freq=1.0, h_freq=10.0)\n",
     "\n",
     "    markers = df.iloc[:, -1]\n",
     "    print(f\"From {filename} with shape:{df.shape} and markers:{len(markers[markers != '0'])} kills:{len(markers[markers == 'kill'])}, deaths:{len(markers[markers == 'death'])}\")\n",
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +153,7 @@
        "((599, 41), (150, 41))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +174,7 @@
        "array([], shape=(0, 41), dtype=float64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,26 +625,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 1.0\n",
+      "accuracy: 0.8733333333333333\n",
       "Confusion Matrix:\n",
       "+-----------------+-----------------+------------------+--------------------+\n",
       "|                 | Predicted: kill | Predicted: death | Predicted: neutral |\n",
       "+-----------------+-----------------+------------------+--------------------+\n",
-      "|  Actual: kill   |       15        |        0         |         0          |\n",
+      "|  Actual: kill   |        5        |        10        |         0          |\n",
       "|  Actual: death  |        0        |       105        |         0          |\n",
-      "| Actual: neutral |        0        |        0         |         30         |\n",
+      "| Actual: neutral |        0        |        9         |         21         |\n",
       "+-----------------+-----------------+------------------+--------------------+\n",
       "\n",
       "Classification Report:\n",
       "+--------------+-----------+--------+----------+---------+\n",
       "|              | precision | recall | f1-score | support |\n",
       "+--------------+-----------+--------+----------+---------+\n",
-      "|     kill     |    1.0    |  1.0   |   1.0    |  15.0   |\n",
-      "|    death     |    1.0    |  1.0   |   1.0    |  105.0  |\n",
-      "|   neutral    |    1.0    |  1.0   |   1.0    |  30.0   |\n",
-      "|   accuracy   |    1.0    |  1.0   |   1.0    |   1.0   |\n",
-      "|  macro avg   |    1.0    |  1.0   |   1.0    |  150.0  |\n",
-      "| weighted avg |    1.0    |  1.0   |   1.0    |  150.0  |\n",
+      "|     kill     |    1.0    | 0.333  |   0.5    |  15.0   |\n",
+      "|    death     |   0.847   |  1.0   |  0.917   |  105.0  |\n",
+      "|   neutral    |    1.0    |  0.7   |  0.824   |  30.0   |\n",
+      "|   accuracy   |   0.873   | 0.873  |  0.873   |  0.873  |\n",
+      "|  macro avg   |   0.949   | 0.678  |  0.747   |  150.0  |\n",
+      "| weighted avg |   0.893   | 0.873  |  0.857   |  150.0  |\n",
       "+--------------+-----------+--------+----------+---------+\n"
      ]
     }
@@ -653,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
