tetris training and improvements

--- a/data_splitting.ipynb
+++ b/data_splitting.ipynb
@@ -19,30 +19,30 @@
     "\n",
     "  # PHASE 1\n",
     "  (1 * 60 * SAMPLING_RATE, 'trash'), \n",
-    "  (20     * SAMPLING_RATE, 'neutral'),\n",
-    "  (40     * SAMPLING_RATE, 'trash'), \n",
+    "  (30     * SAMPLING_RATE, 'neutral'),\n",
+    "  (30     * SAMPLING_RATE, 'trash'), \n",
     "\n",
     "  (5 * 60 * SAMPLING_RATE, 'trash'), \n",
-    "  (1 * 60 * SAMPLING_RATE, 'boredom'), \n",
-    "  (1 * 60 * SAMPLING_RATE, 'trash'), \n",
+    "  (90 * SAMPLING_RATE, 'boredom'), \n",
+    "  (30 * SAMPLING_RATE, 'trash'), \n",
     "\n",
     "  (4 * 60 * SAMPLING_RATE, 'survey'), \n",
     "\n",
     "  # PHASE 2\n",
     "  (1 * 60 * SAMPLING_RATE, 'trash'), \n",
-    "  (20     * SAMPLING_RATE, 'neutral'),\n",
-    "  (40     * SAMPLING_RATE, 'trash'), \n",
+    "  (30     * SAMPLING_RATE, 'neutral'),\n",
+    "  (30     * SAMPLING_RATE, 'trash'), \n",
     "\n",
     "  (7 * 60 * SAMPLING_RATE, 'frustration'),\n",
     "  (4 * 60 * SAMPLING_RATE, 'survey'),\n",
     "\n",
     "  # PHASE 3\n",
     "  (1 * 60 * SAMPLING_RATE, 'trash'), \n",
-    "  (20     * SAMPLING_RATE, 'neutral'),\n",
-    "  (40     * SAMPLING_RATE, 'trash'), \n",
+    "  (30     * SAMPLING_RATE, 'neutral'),\n",
+    "  (30     * SAMPLING_RATE, 'trash'), \n",
     "\n",
-    "  (2 * 60 * SAMPLING_RATE, 'trash'), \n",
-    "  (1 * 60 * SAMPLING_RATE, 'flow'),\n",
+    "  (90 * SAMPLING_RATE, 'trash'), \n",
+    "  (90 * SAMPLING_RATE, 'flow'),\n",
     "  (4 * 60 * SAMPLING_RATE, 'trash'), \n",
     "\n",
     "  (4 * 60 * SAMPLING_RATE, 'survey'),\n",
@@ -318,8 +318,7 @@
      "output_type": "stream",
      "text": [
       "Clearing directories...['./training/', './testing/', './validation/']\n",
-      "Validation sets won't be created...\n",
-      "Saving data for state:  ['boredom', 'neutral']\n"
+      "Saving data for state:  ['boredom', 'neutral', 'flow']\n"
      ]
     }
    ],
@@ -351,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
