--- a/data_splitting.ipynb
+++ b/data_splitting.ipynb
@@ -100,22 +100,23 @@
        "      <th>alpha channel 2</th>\n",
        "      <th>alpha channel 3</th>\n",
        "      <th>alpha channel 4</th>\n",
+       "      <th>alpha channel 5</th>\n",
+       "      <th>alpha channel 6</th>\n",
+       "      <th>alpha channel 7</th>\n",
+       "      <th>alpha channel 8</th>\n",
        "      <th>beta low channel 1</th>\n",
        "      <th>beta low channel 2</th>\n",
-       "      <th>beta low channel 3</th>\n",
-       "      <th>beta low channel 4</th>\n",
-       "      <th>beta mid channel 1</th>\n",
-       "      <th>beta mid channel 2</th>\n",
-       "      <th>beta mid channel 3</th>\n",
-       "      <th>beta mid channel 4</th>\n",
-       "      <th>beta high channel 1</th>\n",
-       "      <th>beta high channel 2</th>\n",
-       "      <th>beta high channel 3</th>\n",
-       "      <th>beta high channel 4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>beta high channel 7</th>\n",
+       "      <th>beta high channel 8</th>\n",
        "      <th>gamma channel 1</th>\n",
        "      <th>gamma channel 2</th>\n",
        "      <th>gamma channel 3</th>\n",
        "      <th>gamma channel 4</th>\n",
+       "      <th>gamma channel 5</th>\n",
+       "      <th>gamma channel 6</th>\n",
+       "      <th>gamma channel 7</th>\n",
+       "      <th>gamma channel 8</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -131,16 +132,17 @@
        "      <td>9.700</td>\n",
        "      <td>11.164</td>\n",
        "      <td>12.638</td>\n",
-       "      <td>14.705</td>\n",
-       "      <td>10.147</td>\n",
-       "      <td>10.001</td>\n",
-       "      <td>11.590</td>\n",
-       "      <td>11.587</td>\n",
-       "      <td>7.248</td>\n",
-       "      <td>8.317</td>\n",
-       "      <td>7.552</td>\n",
-       "      <td>9.434</td>\n",
-       "      <td>6.548</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.511</td>\n",
+       "      <td>10.959</td>\n",
+       "      <td>4.576</td>\n",
+       "      <td>8.696</td>\n",
+       "      <td>7.240</td>\n",
+       "      <td>13.124</td>\n",
+       "      <td>11.658</td>\n",
+       "      <td>4.713</td>\n",
+       "      <td>6.303</td>\n",
+       "      <td>6.659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -154,16 +156,17 @@
        "      <td>9.663</td>\n",
        "      <td>11.101</td>\n",
        "      <td>12.423</td>\n",
-       "      <td>14.672</td>\n",
-       "      <td>10.167</td>\n",
-       "      <td>9.773</td>\n",
-       "      <td>11.498</td>\n",
-       "      <td>11.085</td>\n",
-       "      <td>8.163</td>\n",
-       "      <td>8.485</td>\n",
-       "      <td>7.589</td>\n",
-       "      <td>9.408</td>\n",
-       "      <td>6.615</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.613</td>\n",
+       "      <td>11.257</td>\n",
+       "      <td>4.811</td>\n",
+       "      <td>8.882</td>\n",
+       "      <td>7.283</td>\n",
+       "      <td>13.311</td>\n",
+       "      <td>11.833</td>\n",
+       "      <td>4.564</td>\n",
+       "      <td>6.312</td>\n",
+       "      <td>6.729</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -177,16 +180,17 @@
        "      <td>9.831</td>\n",
        "      <td>10.623</td>\n",
        "      <td>11.916</td>\n",
-       "      <td>14.565</td>\n",
-       "      <td>9.572</td>\n",
-       "      <td>9.363</td>\n",
-       "      <td>10.115</td>\n",
-       "      <td>9.974</td>\n",
-       "      <td>9.627</td>\n",
-       "      <td>8.501</td>\n",
-       "      <td>7.607</td>\n",
-       "      <td>9.410</td>\n",
-       "      <td>6.601</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.832</td>\n",
+       "      <td>11.303</td>\n",
+       "      <td>5.036</td>\n",
+       "      <td>9.027</td>\n",
+       "      <td>7.332</td>\n",
+       "      <td>13.343</td>\n",
+       "      <td>11.871</td>\n",
+       "      <td>4.426</td>\n",
+       "      <td>6.297</td>\n",
+       "      <td>6.780</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -200,16 +204,17 @@
        "      <td>10.189</td>\n",
        "      <td>10.869</td>\n",
        "      <td>11.730</td>\n",
-       "      <td>14.207</td>\n",
-       "      <td>8.290</td>\n",
-       "      <td>8.432</td>\n",
-       "      <td>9.528</td>\n",
-       "      <td>9.926</td>\n",
-       "      <td>10.218</td>\n",
-       "      <td>8.511</td>\n",
-       "      <td>7.516</td>\n",
-       "      <td>9.411</td>\n",
-       "      <td>6.539</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.933</td>\n",
+       "      <td>11.295</td>\n",
+       "      <td>5.293</td>\n",
+       "      <td>8.711</td>\n",
+       "      <td>7.251</td>\n",
+       "      <td>13.340</td>\n",
+       "      <td>11.868</td>\n",
+       "      <td>4.396</td>\n",
+       "      <td>6.017</td>\n",
+       "      <td>6.563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -223,19 +228,21 @@
        "      <td>10.570</td>\n",
        "      <td>10.595</td>\n",
        "      <td>11.136</td>\n",
-       "      <td>13.083</td>\n",
-       "      <td>7.020</td>\n",
-       "      <td>7.974</td>\n",
-       "      <td>9.131</td>\n",
-       "      <td>9.276</td>\n",
-       "      <td>10.312</td>\n",
-       "      <td>8.581</td>\n",
-       "      <td>7.483</td>\n",
-       "      <td>9.394</td>\n",
-       "      <td>6.358</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.840</td>\n",
+       "      <td>11.280</td>\n",
+       "      <td>5.357</td>\n",
+       "      <td>8.489</td>\n",
+       "      <td>6.890</td>\n",
+       "      <td>13.292</td>\n",
+       "      <td>11.848</td>\n",
+       "      <td>4.367</td>\n",
+       "      <td>5.441</td>\n",
+       "      <td>5.961</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -246,40 +253,42 @@
        "3            9.993            5.915            3.643            6.558   \n",
        "4            9.897            5.910            3.738            6.782   \n",
        "\n",
-       "   beta low channel 1  beta low channel 2  beta low channel 3  \\\n",
-       "0               6.231              11.049               9.768   \n",
-       "1               6.179              11.128              10.259   \n",
-       "2               5.548              11.126              10.760   \n",
-       "3               5.415              11.068              10.975   \n",
-       "4               5.133              10.834              11.030   \n",
+       "   alpha channel 5  alpha channel 6  alpha channel 7  alpha channel 8  \\\n",
+       "0            6.231           11.049            9.768            9.700   \n",
+       "1            6.179           11.128           10.259            9.663   \n",
+       "2            5.548           11.126           10.760            9.831   \n",
+       "3            5.415           11.068           10.975           10.189   \n",
+       "4            5.133           10.834           11.030           10.570   \n",
        "\n",
-       "   beta low channel 4  beta mid channel 1  beta mid channel 2  \\\n",
-       "0               9.700              11.164              12.638   \n",
-       "1               9.663              11.101              12.423   \n",
-       "2               9.831              10.623              11.916   \n",
-       "3              10.189              10.869              11.730   \n",
-       "4              10.570              10.595              11.136   \n",
+       "   beta low channel 1  beta low channel 2  ...  beta high channel 7  \\\n",
+       "0              11.164              12.638  ...               10.511   \n",
+       "1              11.101              12.423  ...               10.613   \n",
+       "2              10.623              11.916  ...               10.832   \n",
+       "3              10.869              11.730  ...               10.933   \n",
+       "4              10.595              11.136  ...               10.840   \n",
        "\n",
-       "   beta mid channel 3  beta mid channel 4  beta high channel 1  \\\n",
-       "0              14.705              10.147               10.001   \n",
-       "1              14.672              10.167                9.773   \n",
-       "2              14.565               9.572                9.363   \n",
-       "3              14.207               8.290                8.432   \n",
-       "4              13.083               7.020                7.974   \n",
+       "   beta high channel 8  gamma channel 1  gamma channel 2  gamma channel 3  \\\n",
+       "0               10.959            4.576            8.696            7.240   \n",
+       "1               11.257            4.811            8.882            7.283   \n",
+       "2               11.303            5.036            9.027            7.332   \n",
+       "3               11.295            5.293            8.711            7.251   \n",
+       "4               11.280            5.357            8.489            6.890   \n",
        "\n",
-       "   beta high channel 2  beta high channel 3  beta high channel 4  \\\n",
-       "0               11.590               11.587                7.248   \n",
-       "1               11.498               11.085                8.163   \n",
-       "2               10.115                9.974                9.627   \n",
-       "3                9.528                9.926               10.218   \n",
-       "4                9.131                9.276               10.312   \n",
+       "   gamma channel 4  gamma channel 5  gamma channel 6  gamma channel 7  \\\n",
+       "0           13.124           11.658            4.713            6.303   \n",
+       "1           13.311           11.833            4.564            6.312   \n",
+       "2           13.343           11.871            4.426            6.297   \n",
+       "3           13.340           11.868            4.396            6.017   \n",
+       "4           13.292           11.848            4.367            5.441   \n",
        "\n",
-       "   gamma channel 1  gamma channel 2  gamma channel 3  gamma channel 4  \n",
-       "0            8.317            7.552            9.434            6.548  \n",
-       "1            8.485            7.589            9.408            6.615  \n",
-       "2            8.501            7.607            9.410            6.601  \n",
-       "3            8.511            7.516            9.411            6.539  \n",
-       "4            8.581            7.483            9.394            6.358  "
+       "   gamma channel 8  \n",
+       "0            6.659  \n",
+       "1            6.729  \n",
+       "2            6.780  \n",
+       "3            6.563  \n",
+       "4            5.961  \n",
+       "\n",
+       "[5 rows x 40 columns]"
       ]
      },
      "execution_count": 3,
@@ -318,7 +327,7 @@
      "output_type": "stream",
      "text": [
       "Clearing directories...['./training/', './testing/', './validation/']\n",
-      "Saving data for state:  ['boredom', 'neutral', 'flow']\n"
+      "Saving data for state:  ['boredom', 'flow']\n"
      ]
     }
    ],
